Fix content overflow

--- a/app/styles/components/page/_base.scss
+++ b/app/styles/components/page/_base.scss
@@ -8,6 +8,7 @@
   display: block;
   height: 25vh;
   position: relative;
+  overflow: hidden;
 
   &:nth-child(3) {
     order: 1;
